--- a/css/nxp-icon.css
+++ b/css/nxp-icon.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'nxp-icon';
-  src: url('../font/nxp-icon.eot?96174294');
-  src: url('../font/nxp-icon.eot?96174294#iefix') format('embedded-opentype'),
-       url('../font/nxp-icon.woff2?96174294') format('woff2'),
-       url('../font/nxp-icon.woff?96174294') format('woff'),
-       url('../font/nxp-icon.ttf?96174294') format('truetype'),
-       url('../font/nxp-icon.svg?96174294#nxp-icon') format('svg');
+  src: url('../font/nxp-icon.eot?22717289');
+  src: url('../font/nxp-icon.eot?22717289#iefix') format('embedded-opentype'),
+       url('../font/nxp-icon.woff2?22717289') format('woff2'),
+       url('../font/nxp-icon.woff?22717289') format('woff'),
+       url('../font/nxp-icon.ttf?22717289') format('truetype'),
+       url('../font/nxp-icon.svg?22717289#nxp-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'nxp-icon';
-    src: url('../font/nxp-icon.svg?96174294#nxp-icon') format('svg');
+    src: url('../font/nxp-icon.svg?22717289#nxp-icon') format('svg');
   }
 }
 */
@@ -412,6 +412,8 @@
 .icon-nxp-sensor:before { content: '\e963'; } /* '' */
 .icon-nxp-signal:before { content: '\e964'; } /* '' */
 .icon-fa-check:before { content: '\e965'; } /* '' */
+.icon-fa-grip-dots-vertical:before { content: '\e966'; } /* '' */
+.icon-nxp-lte:before { content: '\e967'; } /* '' */
 .icon-nxp-smart-access:before { content: '\e968'; } /* '' */
 .icon-nxp-smart-card:before { content: '\e969'; } /* '' */
 .icon-nxp-smart-control:before { content: '\e96a'; } /* '' */
