Added Circle UI Icons
fa-circle-check-ui
fa-circle-exclamation-bold-ui
fa-circle-exclamation-ui
fa-circle-xmark-ui

--- a/css/nxp-icon-codes.css
+++ b/css/nxp-icon-codes.css
@@ -452,3 +452,7 @@
 .icon-nxp-wireless-charger:before { content: '\e9c2'; } /* '' */
 .icon-nxp-wireless:before { content: '\e9c3'; } /* '' */
 .icon-nxp-worldwide-location:before { content: '\e9c4'; } /* '' */
+.icon-fa-circle-check-ui:before { content: '\e9c5'; } /* '' */
+.icon-fa-circle-exclamation-bold-ui:before { content: '\e9c6'; } /* '' */
+.icon-fa-circle-exclamation-ui:before { content: '\e9c7'; } /* '' */
+.icon-fa-circle-xmark-ui:before { content: '\e9c8'; } /* '' */
