--- a/css/nxp-icon.css
+++ b/css/nxp-icon.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'nxp-icon';
-  src: url('../font/nxp-icon.eot?56701988');
-  src: url('../font/nxp-icon.eot?56701988#iefix') format('embedded-opentype'),
-       url('../font/nxp-icon.woff2?56701988') format('woff2'),
-       url('../font/nxp-icon.woff?56701988') format('woff'),
-       url('../font/nxp-icon.ttf?56701988') format('truetype'),
-       url('../font/nxp-icon.svg?56701988#nxp-icon') format('svg');
+  src: url('../font/nxp-icon.eot?46382775');
+  src: url('../font/nxp-icon.eot?46382775#iefix') format('embedded-opentype'),
+       url('../font/nxp-icon.woff2?46382775') format('woff2'),
+       url('../font/nxp-icon.woff?46382775') format('woff'),
+       url('../font/nxp-icon.ttf?46382775') format('truetype'),
+       url('../font/nxp-icon.svg?46382775#nxp-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'nxp-icon';
-    src: url('../font/nxp-icon.svg?56701988#nxp-icon') format('svg');
+    src: url('../font/nxp-icon.svg?46382775#nxp-icon') format('svg');
   }
 }
 */
@@ -507,3 +507,7 @@
 .icon-nxp-wireless-charger:before { content: '\e9c2'; } /* '' */
 .icon-nxp-wireless:before { content: '\e9c3'; } /* '' */
 .icon-nxp-worldwide-location:before { content: '\e9c4'; } /* '' */
+.icon-fa-circle-check-ui:before { content: '\e9c5'; } /* '' */
+.icon-fa-circle-exclamation-bold-ui:before { content: '\e9c6'; } /* '' */
+.icon-fa-circle-exclamation-ui:before { content: '\e9c7'; } /* '' */
+.icon-fa-circle-xmark-ui:before { content: '\e9c8'; } /* '' */
