Added nxp-ac, nxp-dc

--- a/css/nxp-icon-codes.css
+++ b/css/nxp-icon-codes.css
@@ -456,3 +456,5 @@
 .icon-fa-circle-exclamation-bold-ui:before { content: '\e9c6'; } /* '' */
 .icon-fa-circle-exclamation-ui:before { content: '\e9c7'; } /* '' */
 .icon-fa-circle-xmark-ui:before { content: '\e9c8'; } /* '' */
+.icon-nxp-ac:before { content: '\e9c9'; } /* '' */
+.icon-nxp-dc:before { content: '\e9ca'; } /* '' */
