--- a/css/nxp-icon-ie7-codes.css
+++ b/css/nxp-icon-ie7-codes.css
@@ -456,3 +456,5 @@
 .icon-fa-circle-exclamation-bold-ui { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c6;&nbsp;'); }
 .icon-fa-circle-exclamation-ui { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c7;&nbsp;'); }
 .icon-fa-circle-xmark-ui { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c8;&nbsp;'); }
+.icon-nxp-ac { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c9;&nbsp;'); }
+.icon-nxp-dc { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ca;&nbsp;'); }
