--- a/css/nxp-icon-codes.css
+++ b/css/nxp-icon-codes.css
@@ -458,3 +458,4 @@
 .icon-fa-circle-xmark-ui:before { content: '\e9c8'; } /* '' */
 .icon-nxp-ac:before { content: '\e9c9'; } /* '' */
 .icon-nxp-dc:before { content: '\e9ca'; } /* '' */
+.icon-nxp-matter:before { content: '\e9cb'; } /* '' */
