--- a/css/nxp-icon.css
+++ b/css/nxp-icon.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'nxp-icon';
-  src: url('../font/nxp-icon.eot?41675671');
-  src: url('../font/nxp-icon.eot?41675671#iefix') format('embedded-opentype'),
-       url('../font/nxp-icon.woff2?41675671') format('woff2'),
-       url('../font/nxp-icon.woff?41675671') format('woff'),
-       url('../font/nxp-icon.ttf?41675671') format('truetype'),
-       url('../font/nxp-icon.svg?41675671#nxp-icon') format('svg');
+  src: url('../font/nxp-icon.eot?29868990');
+  src: url('../font/nxp-icon.eot?29868990#iefix') format('embedded-opentype'),
+       url('../font/nxp-icon.woff2?29868990') format('woff2'),
+       url('../font/nxp-icon.woff?29868990') format('woff'),
+       url('../font/nxp-icon.ttf?29868990') format('truetype'),
+       url('../font/nxp-icon.svg?29868990#nxp-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'nxp-icon';
-    src: url('../font/nxp-icon.svg?41675671#nxp-icon') format('svg');
+    src: url('../font/nxp-icon.svg?29868990#nxp-icon') format('svg');
   }
 }
 */
@@ -513,3 +513,4 @@
 .icon-fa-circle-xmark-ui:before { content: '\e9c8'; } /* '' */
 .icon-nxp-ac:before { content: '\e9c9'; } /* '' */
 .icon-nxp-dc:before { content: '\e9ca'; } /* '' */
+.icon-nxp-matter:before { content: '\e9cb'; } /* '' */
