--- a/css/nxp-icon-ie7-codes.css
+++ b/css/nxp-icon-ie7-codes.css
@@ -458,3 +458,4 @@
 .icon-fa-circle-xmark-ui { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c8;&nbsp;'); }
 .icon-nxp-ac { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c9;&nbsp;'); }
 .icon-nxp-dc { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ca;&nbsp;'); }
+.icon-nxp-matter { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cb;&nbsp;'); }
