--- a/css/nxp-icon-codes.css
+++ b/css/nxp-icon-codes.css
@@ -459,3 +459,5 @@
 .icon-nxp-ac:before { content: '\e9c9'; } /* '' */
 .icon-nxp-dc:before { content: '\e9ca'; } /* '' */
 .icon-nxp-matter:before { content: '\e9cb'; } /* '' */
+.icon-fa-moped:before { content: '\e9cc'; } /* '' */
+.icon-nxp-sustainability:before { content: '\e9cd'; } /* '' */
