--- a/css/nxp-icon-ie7-codes.css
+++ b/css/nxp-icon-ie7-codes.css
@@ -459,3 +459,5 @@
 .icon-nxp-ac { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9c9;&nbsp;'); }
 .icon-nxp-dc { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ca;&nbsp;'); }
 .icon-nxp-matter { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cb;&nbsp;'); }
+.icon-fa-moped { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cc;&nbsp;'); }
+.icon-nxp-sustainability { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cd;&nbsp;'); }
