added new icons
fa-backpack, fa-bandage, fa-battery-bolt, fa-bolt-slash, fa-boot, fa-car-burst, fa-child, fa-cloud-rain, fa-eye-light, fa-file-code, fa-floppy-disk, fa-gauge-circle-bolt, fa-inhaler, fa-kit-medical, fa-moon, fa-person-seat-reclined, fa-person-walking, fa-road, fa-solar-panel, fa-square-bolt, fa-square-info, fa-square-poll-vertical, fa-sun-bright, fa-sun, fa-sunrise, fa-sunset, fa-syringe, fa-transformer-bolt, fa-truck-fast, fa-utility-pole, fa-watch-fitness, fa-wind, nxp-car-drive, nxp-hand-holding-badge, nxp-rf-slash, nxp-tv-station

--- a/css/nxp-icon-codes.css
+++ b/css/nxp-icon-codes.css
@@ -461,3 +461,39 @@
 .icon-nxp-matter:before { content: '\e9cb'; } /* '' */
 .icon-fa-moped:before { content: '\e9cc'; } /* '' */
 .icon-nxp-sustainability:before { content: '\e9cd'; } /* '' */
+.icon-fa-backpack:before { content: '\e9ce'; } /* '' */
+.icon-fa-bandage:before { content: '\e9cf'; } /* '' */
+.icon-fa-battery-bolt:before { content: '\e9d0'; } /* '' */
+.icon-fa-battery-slash-1:before { content: '\e9d1'; } /* '' */
+.icon-fa-boot:before { content: '\e9d2'; } /* '' */
+.icon-fa-car-burst:before { content: '\e9d3'; } /* '' */
+.icon-fa-child:before { content: '\e9d4'; } /* '' */
+.icon-fa-cloud-rain:before { content: '\e9d5'; } /* '' */
+.icon-fa-eye-light:before { content: '\e9d6'; } /* '' */
+.icon-fa-file-code:before { content: '\e9d7'; } /* '' */
+.icon-fa-floppy-disk:before { content: '\e9d8'; } /* '' */
+.icon-fa-gauge-circle-bolt:before { content: '\e9d9'; } /* '' */
+.icon-fa-inhaler:before { content: '\e9da'; } /* '' */
+.icon-fa-kit-medical:before { content: '\e9db'; } /* '' */
+.icon-fa-moon:before { content: '\e9dc'; } /* '' */
+.icon-fa-person-seat-reclined:before { content: '\e9dd'; } /* '' */
+.icon-fa-person-walking:before { content: '\e9de'; } /* '' */
+.icon-fa-road:before { content: '\e9df'; } /* '' */
+.icon-fa-square-bolt:before { content: '\e9e0'; } /* '' */
+.icon-fa-solar-panel:before { content: '\e9e1'; } /* '' */
+.icon-fa-square-info:before { content: '\e9e2'; } /* '' */
+.icon-fa-square-poll-vertical:before { content: '\e9e3'; } /* '' */
+.icon-fa-sun-bright:before { content: '\e9e4'; } /* '' */
+.icon-fa-sun:before { content: '\e9e5'; } /* '' */
+.icon-fa-sunrise:before { content: '\e9e6'; } /* '' */
+.icon-fa-sunset:before { content: '\e9e7'; } /* '' */
+.icon-fa-syringe:before { content: '\e9e8'; } /* '' */
+.icon-fa-transformer-bolt:before { content: '\e9e9'; } /* '' */
+.icon-fa-truck-fast:before { content: '\e9ea'; } /* '' */
+.icon-fa-utility-pole:before { content: '\e9eb'; } /* '' */
+.icon-fa-watch-fitness:before { content: '\e9ec'; } /* '' */
+.icon-fa-wind:before { content: '\e9ed'; } /* '' */
+.icon-nxp-car-drive:before { content: '\e9ee'; } /* '' */
+.icon-nxp-hands-holding-badge:before { content: '\e9ef'; } /* '' */
+.icon-nxp-rf-slash:before { content: '\e9f0'; } /* '' */
+.icon-nxp-tv-station:before { content: '\e9f1'; } /* '' */
