--- a/css/nxp-icon-ie7.css
+++ b/css/nxp-icon-ie7.css
@@ -472,3 +472,39 @@
 .icon-nxp-matter { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cb;&nbsp;'); }
 .icon-fa-moped { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cc;&nbsp;'); }
 .icon-nxp-sustainability { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cd;&nbsp;'); }
+.icon-fa-backpack { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ce;&nbsp;'); }
+.icon-fa-bandage { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9cf;&nbsp;'); }
+.icon-fa-battery-bolt { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d0;&nbsp;'); }
+.icon-fa-battery-slash-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d1;&nbsp;'); }
+.icon-fa-boot { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d2;&nbsp;'); }
+.icon-fa-car-burst { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d3;&nbsp;'); }
+.icon-fa-child { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d4;&nbsp;'); }
+.icon-fa-cloud-rain { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d5;&nbsp;'); }
+.icon-fa-eye-light { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d6;&nbsp;'); }
+.icon-fa-file-code { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d7;&nbsp;'); }
+.icon-fa-floppy-disk { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d8;&nbsp;'); }
+.icon-fa-gauge-circle-bolt { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9d9;&nbsp;'); }
+.icon-fa-inhaler { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9da;&nbsp;'); }
+.icon-fa-kit-medical { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9db;&nbsp;'); }
+.icon-fa-moon { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9dc;&nbsp;'); }
+.icon-fa-person-seat-reclined { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9dd;&nbsp;'); }
+.icon-fa-person-walking { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9de;&nbsp;'); }
+.icon-fa-road { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9df;&nbsp;'); }
+.icon-fa-square-bolt { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e0;&nbsp;'); }
+.icon-fa-solar-panel { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e1;&nbsp;'); }
+.icon-fa-square-info { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e2;&nbsp;'); }
+.icon-fa-square-poll-vertical { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e3;&nbsp;'); }
+.icon-fa-sun-bright { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e4;&nbsp;'); }
+.icon-fa-sun { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e5;&nbsp;'); }
+.icon-fa-sunrise { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e6;&nbsp;'); }
+.icon-fa-sunset { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e7;&nbsp;'); }
+.icon-fa-syringe { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e8;&nbsp;'); }
+.icon-fa-transformer-bolt { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9e9;&nbsp;'); }
+.icon-fa-truck-fast { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ea;&nbsp;'); }
+.icon-fa-utility-pole { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9eb;&nbsp;'); }
+.icon-fa-watch-fitness { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ec;&nbsp;'); }
+.icon-fa-wind { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ed;&nbsp;'); }
+.icon-nxp-car-drive { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ee;&nbsp;'); }
+.icon-nxp-hands-holding-badge { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9ef;&nbsp;'); }
+.icon-nxp-rf-slash { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9f0;&nbsp;'); }
+.icon-nxp-tv-station { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe9f1;&nbsp;'); }
